--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="styli.css">
 </head>
 <body>
-    <header>   
+    <header class="cabecalho">   
         
-        <h1>Vai ser uma imagem aqui</h1>
+        <img class="Logotipogamer" src="Logotipogamer.png" alt="logotipo">
 
-        <ul>
-            <li>escola</li>
-            <li>estudante</li>
+
+        <ul class="cabecalho-lista">
+            <li class='cabecalho-item'>escola</li>
+            <li class="cabecalho-item">estudante</li>
         </ul>
         
     </header>
